<resources>
    <string name="app_name">CloudPrint4AndroidManager</string>
    <string name="app_name_ch">优印</string>
    <string name="action_settings">Settings</string>
    <string name="tm_str_detail_jhs_buy_end_time_format_1">"%1$s小时%2$s分%3$s秒"</string>
    <string name="tm_str_detail_jhs_buy_end_time_format_2">"%1$s分%2$s秒"</string>
    <string name="dingdan_info">订单</string>
    <string name="msg_info">消息</string>
    <string name="user_info">我的</string>
    <string name="new_paswd">输入您的密码</string>
    <string name="comfirm_paswd">再次确认密码</string>

    <!--for iconfont-->
    <string name="user">&#xe600;</string>
    <string name="dingdan">&#xe601;</string>
    <string name="cgong">&#xe602;</string>;
    <string name="del">&#xe603;</string>;
    <string name="building_name">&#xe604;</string>;
    <string name="jstong">&#xe605;</string>;
    <string name="search">&#xe606;</string>;
    <string name="next">&#xe607;</string>;
    <string name="user_add">&#xe60a;</string>;
    <string name="love">&#xe60b;</string>;
    <string name="msg">&#xe60c;</string>;
    <string name="user_group">&#xe60d;</string>;
    <string name="add">&#xe60f;</string>;
    <string name="user2">&#xe610;</string>
    <string name="cloud">&#xe616;</string>;
    <string name="star">&#xe617;</string>;
    <string name="setting">&#xe618;</string>;
    <string name="exit">&#xe619;</string>;
    <string name="alert">&#xe621;</string>;
    <string name="question">&#xe622;</string>;
    <string name="about_us">&#xe623;</string>;
    <string name="my_count">&#xe624;</string>;
    <string name="phone">&#xe625;</string>;
    <string name="phone_comfirm">&#xe627;</string>;
    <string name="card_comfirm">&#xe628;</string>;
    <string name="successful">&#xe629;</string>;
    <string name="wait">&#xe62a;</string>;
    <string name="kefu">&#xe62d;</string>;
    <string name="lingdang">&#xe609;</string>
    <string name="upload">&#xe612;</string>
    <string name="location">&#xe61f;</string>
    <string name="printer">&#xe60e;</string>
    <string name="alerttime">&#xe620;</string>


    <string name="account">账号</string>
    <string name="paswrd">密码</string>
    <string name="oauthCode">验证码</string>
    <string name="unprinted">未打印</string>
    <string name="unsend">未配送</string>
    <string name="sent">已配送</string>
    <string name="mine">个人信息</string>
    <string name="totalorder">单量统计</string>
    <string name="nick">姓名</string>
    <string name="qq">QQ</string>
    <string name="idnum">身份证号</string>
    <string name="sex">性别</string>
    <string name="email">邮件</string>
    <string name="graduated">毕业时间(例如:2017)</string>
    <string name="zhifubao">支付宝账号</string>
    <string name="dormname">宿舍房号</string>
    <string name="selectShop">选择shop</string>
    <string name="studentcard">上传学生证照片</string>
    <string name="idcard">身份证照片</string>
    <string name="school">输入学校具体名称</string>
    <string name="forgetpasword">修改密码</string>
    <string name="registe">注册</string>
    <string name="login">登录</string>
    <string name="no_more_orders">没有更多订单了</string>
    <string name="tasksList">任务列表</string>
    <string name="unresigned">辞职</string>
    <string name="logout">登出</string>
    <string name="building">请选择居住宿舍名</string>
    <string name="role">选择职务</string>
    <string name="nocontent">null</string>
    <string name="shop_id">可配送宿舍</string>
    <string name="alipay">支付宝账号</string>
    <string name="buildings">宿舍楼名</string>
    <string name="graduatedyear">毕业年份</string>
    <string name="changeinfo">修改个人信息</string>
    <string name="complains">我的投诉</string>
    <string name="order_type">打印类型</string>

    <string name="self_info">个人</string>
    <string name="others">其他</string>
    <string name="textinfo">文件信息</string>

    <string name="pay_time">下单时间:</string>
    <string name="deliver_time">配送时间:</string>
    <string name="order_msg">留言</string>
    <string name="sendbuilding">可配送宿舍区</string>
    <string name="rating">评分:</string>
    <string name="no_data_available">当前未接到订单</string>
    <string name="default_comment">配送很快，打印效果不错哟</string>
    <string name="manage_building">选择可配送宿舍</string>

</resources>
