<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:gravity="center"
    android:orientation="horizontal"
    android:paddingBottom="4dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp">

    <com.uprint.android_pack.cloudprint4androidmanager.widgets.MenuItemLayout
        android:id="@+id/myOrders"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:onClick="route"
        app:iconfontView="@string/dingdan"
        app:infotextView="@string/dingdan_info" />

    <com.uprint.android_pack.cloudprint4androidmanager.widgets.MenuItemLayout
        android:id="@+id/mine"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:onClick="route"
        app:iconfontView="@string/user"
        app:infotextView="@string/user_info" />
</LinearLayout>