<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:hint="@string/nick"
            android:paddingLeft="8dp"
            app:met_baseColor="#000"
            app:met_clearButton="true"
            app:met_floatingLabel="normal"
            app:met_primaryColor="#00BCD4" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/radioGroup"
            android:layout_below="@id/nickname"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:paddingLeft="8dp"
            android:text="@string/sex"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nickname"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="4dp"
            android:layout_toRightOf="@id/textView"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/boy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:checked="true"
                android:text="男" />

            <RadioButton
                android:id="@+id/girl"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:text="女" />
        </RadioGroup>

        <com.rengwuxian.materialedittext.MaterialAutoCompleteTextView
            android:id="@+id/school"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView"
            android:layout_marginTop="4dp"
            android:hint="@string/school"
            android:paddingLeft="8dp"
            android:popupBackground="@drawable/backgound"
            app:met_baseColor="#000"
            app:met_clearButton="true"
            app:met_floatingLabel="normal"
            app:met_primaryColor="#00BCD4" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/select_shop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/school"
            android:layout_marginTop="4dp"
            android:editable="false"
            android:hint="@string/building"
            android:paddingLeft="8dp"
            app:met_baseColor="#000"
            app:met_primaryColor="#00BCD4" />


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/sendBuilding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/select_shop"
            android:layout_marginTop="4dp"
            android:editable="false"
            android:ellipsize="end"
            android:hint="@string/sendbuilding"
            android:paddingLeft="8dp"
            android:singleLine="true"
            app:met_baseColor="#000"
            app:met_primaryColor="#00BCD4" />


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/graduatedYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sendBuilding"
            android:layout_marginTop="4dp"
            android:hint="@string/graduated"
            android:inputType="number"
            android:paddingLeft="8dp"
            app:met_baseColor="#000"
            app:met_clearButton="true"
            app:met_floatingLabel="normal"
            app:met_primaryColor="#00BCD4" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/qqaccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/graduatedYear"
            android:layout_marginTop="4dp"
            android:hint="@string/qq"
            android:inputType="number"
            android:paddingLeft="8dp"
            app:met_baseColor="#000"
            app:met_clearButton="true"
            app:met_floatingLabel="normal"
            app:met_primaryColor="#00BCD4" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/idnum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/qqaccount"
            android:layout_marginTop="4dp"
            android:hint="@string/idnum"
            android:inputType="number"
            android:paddingLeft="8dp"
            app:met_baseColor="#000"
            app:met_clearButton="true"
            app:met_floatingLabel="normal"
            app:met_primaryColor="#00BCD4" />


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/dormname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idnum"
            android:layout_marginTop="4dp"
            android:hint="@string/dormname"
            android:paddingLeft="8dp"
            app:met_baseColor="#000"
            app:met_clearButton="true"
            app:met_floatingLabel="normal"
            app:met_primaryColor="#00BCD4" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dormname"
            android:layout_marginTop="4dp"
            android:hint="@string/email"
            android:paddingLeft="8dp"
            app:met_baseColor="#000"
            app:met_clearButton="true"
            app:met_floatingLabel="normal"
            app:met_primaryColor="#00BCD4" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/zhifubao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email"
            android:layout_marginTop="4dp"
            android:hint="@string/zhifubao"
            android:paddingLeft="8dp"
            app:met_baseColor="#000"
            app:met_clearButton="true"
            app:met_floatingLabel="normal"
            app:met_primaryColor="#00BCD4" />

    </RelativeLayout>
</ScrollView>